tests/base/parser/bad/stmts_t-id-assign-with.scilla
scilla_version 0

contract Test
()

(* Assigned to invalid identifier *)
transition arbitrary ()
  some_var := 'A
end
